# 519Moodlight.github.io

./: README.md  index.html
ArduinoCode_Demo_Version/: ArduinoCode_Demo_Version.ino
pico4ML-persondetection/: CMakeLists.txt
pico4ML-persondetection/examples/person_detection/: CMakeLists.txt  detection_responder.cpp  detection_responder.h  image_provider.cpp  image_provider.h  image_provider_test.cpp  main.cpp  main_functions.cpp  model_settings.cpp  model_settings.h  no_person_image_data.h  person_detect_model_data.h  person_detection_test.cpp  person_image_data.h
pico4ML-persondetection/include/ICM20948/: ICM20948.cpp  ICM20948.h  README.md
pico4ML-persondetection/include/ICM20948/examples/SimpleAccelerometer/: SimpleAccelerometer.ino
pico4ML-persondetection/include/ICM20948/examples/SimpleGyroscope/: SimpleGyroscope.ino
pico4ML-persondetection/include/ICM20948/examples/SimpleMagnetometer/: SimpleMagnetometer.ino
pico4ML-persondetection/include/ICM42622/: CMakeLists.txt  ICM42622.cpp  ICM42622.h
pico4ML-persondetection/include/LCD_st7735/: LCD_st7735.c
pico4ML-persondetection/include/arducam_hm01b0/: CMakeLists.txt  README.md  arducam_hm01b0.c  image.pio.h
pico4ML-persondetection/include/arducam_hm01b0/examples/camera/: camera.ino
pico4ML-persondetection/include/arducam_mic/: README.md  arducam_mic.c  mic_i2s.pio.h
pico4ML-persondetection/include/arducam_mic/examples/mic/: mic.ino
uart_sht40_QTPY2040_Display/: CmakeLists.txt  i2c.pio  pio_i2c.c  project.c  sht4x.c  sht4x.h
